--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- 
-    Criar uma nova pasta, e abrir ela no Visual Studio Code
-    Criar no VS Code um novo arquivo: index.html
+<!--
+    Vamos criar quase como um tweet (em anexo)
+
+    Após criar o elemento TITLE:
+    *clique com botão direito* -> Open with Live Server
+    A página deverá se abrir automaticamente no browser
+    - não há nada na página (ainda)
+    - demonstrar o title
+    - falar sobre o IP e porta (127.0.0.1:5500)
+    - falar sobre o arquivo que está sendo exibido (index.html)
 -->
-<!-- HTML não é uma linguagem case sensitive, mas, por convenção escrevemos praticamente tudo em lowercase (salvo excessões) -->]
 
-<!-- DOCTYPE indica aos browsers que este e um documento HTML5 -->
 <!DOCTYPE html>
-
-<!-- Após isso usamos o elemento 'html' para definir a estrutura da página -->
-<!-- esta é a tag de abertura -->
 <html>
-    
-<!-- esta é a tag de fechamento '</' -->
+    <!-- o elemento head é usado para dar ao browser informações úteis sobre a página -->
+    <head>
+        <!-- o elemento title do head é usado para informar o título do site para o Browser colocar na 'aba' -->
+        <title>Minha primeira página 🤙</title>
+        
+    </head>
+    <body></body>
 </html>
