--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
-<!--
-    Vamos criar quase como um tweet (em anexo)
-
-    Após criar o elemento TITLE:
-    *clique com botão direito* -> Open with Live Server
-    A página deverá se abrir automaticamente no browser
-    - não há nada na página (ainda)
-    - demonstrar o title
-    - falar sobre o IP e porta (127.0.0.1:5500)
-    - falar sobre o arquivo que está sendo exibido (index.html)
--->
-
 <!DOCTYPE html>
 <html>
-    <!-- o elemento head é usado para dar ao browser informações úteis sobre a página -->
     <head>
-        <!-- o elemento title do head é usado para informar o título do site para o Browser colocar na 'aba' -->
         <title>Minha primeira página 🤙</title>
-        
     </head>
-    <body></body>
+    <body>
+        <!-- Um tweet tem a foto/imagem do usuário -->
+        <!--
+            o elemento img tem duas novidades
+            1 - Não possui tag de fechamento
+                Este elemento não pode ter nenhum elemento filho. Comparar com Title ou Head
+            2 - Atributos: Usados para personalizar e configurar um elemento
+                src : o endereço da nossa imagem
+                alt : texto alternativo.
+                    ele serve pra mostrar um texto caso não tenha encontrado a imagem
+                    e leitores de tela para pessoas cegas usam esse atributo para descreverem a imagem para o usuário
+        -->
+        <!--
+            *criar arquivo de avatar* 
+            Criar uma pasta chamada 'imagens'
+            Colocar o arquivo avatar.png lá dentro
+        -->
+        <img src="" alt="">
+    </body>
 </html>
