4 - P e Restante dos elementos do tweet

--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
         <title>Minha primeira página 🤙</title>
     </head>
     <body>
-        <!-- Um tweet tem a foto/imagem do usuário -->
-        <!--
-            o elemento img tem duas novidades
-            1 - Não possui tag de fechamento
-                Este elemento não pode ter nenhum elemento filho. Comparar com Title ou Head
-            2 - Atributos: Usados para personalizar e configurar um elemento
-                src : o endereço da nossa imagem
-                alt : texto alternativo.
-                    ele serve pra mostrar um texto caso não tenha encontrado a imagem
-                    e leitores de tela para pessoas cegas usam esse atributo para descreverem a imagem para o usuário
-        -->
-        <!--
-            *criar arquivo de avatar* 
-            Criar uma pasta chamada 'imagens'
-            Colocar o arquivo avatar.png lá dentro
-        -->
-        <img src="" alt="">
+        <img
+            src="imagens/avatar.png"
+            alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
+        />
+        <!-- p é um parágrafo, vamos colocar o nome de usuario e o seu @ -->
+        <p>martonilda @suco_de_uva</p>
+        <p>dos mesmos criadores de kkkcrying, vem ai hehehehehehelp</p>
+        <!-- demonstrar que não parece nada com um tweet, pq ainda não aplicamos CSS ainda -->
     </body>
 </html>
