5 - width da imagem

--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html>
     <head>
         <title>Minha primeira página 🤙</title>
+        <!-- o elemento style é onde criamos o nosso código CSS -->
+        <!--
+            a imagem está muuuito grande, vamos diminuir
+            começamos por dizer o que queremos estilizar, nesse caso 'img' nosso elemento de imagem
+            depois colocamos o que queremos que seja feito com esse elemento
+            uma propriedade CSS é composta pelo seu nome e pelo valor:
+            nome: width
+            valor: 100px
+
+            salvar e demonstrar no browser
+        -->
+        <style>
+            img {
+                width: 100px;
+            }
+        </style>
     </head>
     <body>
         <img
             src="imagens/avatar.png"
             alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
         />
-        <!-- p é um parágrafo, vamos colocar o nome de usuario e o seu @ -->
         <p>martonilda @suco_de_uva</p>
         <p>dos mesmos criadores de kkkcrying, vem ai hehehehehehelp</p>
-        <!-- demonstrar que não parece nada com um tweet, pq ainda não aplicamos CSS ainda -->
     </body>
 </html>
