--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html>
     <head>
         <title>Minha primeira página 🤙</title>
-        <!-- o elemento style é onde criamos o nosso código CSS -->
         <!--
-            a imagem está muuuito grande, vamos diminuir
-            começamos por dizer o que queremos estilizar, nesse caso 'img' nosso elemento de imagem
-            depois colocamos o que queremos que seja feito com esse elemento
-            uma propriedade CSS é composta pelo seu nome e pelo valor:
-            nome: width
-            valor: 100px
-
-            salvar e demonstrar no browser
+            a imagem ainda não parece muito com a de um tweet, oq poderiamos mudar ?
+            AHA! Os cantos, estão muito pontudos hehe
+            Para isso usamos a propriedade border-radius
+            
+            *demonstrar mudanças*
         -->
         <style>
             img {
                 width: 100px;
+                border-radius: 10px;
             }
         </style>
     </head>
