--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <title>Minha primeira página 🤙</title>
         <!--
-            a imagem ainda não parece muito com a de um tweet, oq poderiamos mudar ?
-            AHA! Os cantos, estão muito pontudos hehe
-            Para isso usamos a propriedade border-radius
-            
-            *demonstrar mudanças*
+            um truque:
+            vc pode informar em border-radius a METADE do valor de width para deixar
+            a imagem redonda
+            o valor pode ser informado em % para obter o mesmo resultado: 50%
         -->
         <style>
             img {
                 width: 100px;
-                border-radius: 10px;
+                border-radius: 50px;
             }
         </style>
     </head>
