--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!--
-    Validação HTML
-    Às vezes você quer ver se pode melhorar alguma coisa no site ou algo não está funcionando como você esperava.
-    Validação do HTML pode te ajudar com isso!
-    https://validator.w3.org/#validate_by_upload
-    Selecionar arquivo index.html para validação e clicar em Check
-    Vão aparecer 2 pontos:
-    * Consider adding a lang attribute to the html start tag to declare the language of this document.
-    * The character encoding was not declared. Proceeding using windows-1252.
+    Validação CSS
+    https://jigsaw.w3.org/css-validator/#validate_by_input
+    Copiar e colar código CSS e validar
+    O código vai estar sem erros, mas você pode forçar a barra pra mostrar um erro aparecer.
+    Ex.: Tirar alguns ';', colocar 'middle' no float, etc
 -->
-
 <!DOCTYPE html>
-<!-- 
-    -> Consider adding a lang attribute to the html start tag to declare the language of this document.
-    Vamos adicionar o atributo lang ao elemento html
-    Esse atributo informa aos Motores de Busca (Google, etc) que esta página está no idioma informado
-    Vamos usar pt (Portuguese)
-
-    Validar novamente para ver o erro sumir
--->
 <html lang="pt">
     <head>
         <title>Minha primeira página 🤙</title>
