--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     </head>
     <body>
         <!--
-            Quase todas as páginas na internet possuem links para outras páginas
-            Para criar esses links nós usamos o elemento âncora (a)
-            Todo elemento âncora deve possuir o atributo "href" (hypertext reference) que é o endereço de destino do link
-            E para termos onde clicar, vamos adicionar um conteúdo à âncora, no nosso caso, um texto: Sobre mim
+            Mas não é apenas texto que pode ser informado no conteúdo do elemento âncora
+            Vamos fazer o mesmo usando uma imagem!
 
-            Então vamos criar um novo arquivo: sobre.html
         -->
-        <a href="paginas/sobre.html">Sobre mim</a>
+        <a href="paginas/sobre.html">
+            <img
+                src="imagens/avatar.png"
+                alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
+            />
+        </a>
     </body>
 </html>
