15 - Link na página sobre

--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
         </style>
     </head>
     <body>
-        <!--
-            Mas não é apenas texto que pode ser informado no conteúdo do elemento âncora
-            Vamos fazer o mesmo usando uma imagem!
-
-        -->
-        <a href="paginas/sobre.html">
-            <img
-                src="imagens/avatar.png"
-                alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
-            />
-        </a>
+        <a href="paginas/sobre.html">Sobre mim</a>
     </body>
 </html>
