--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     </head>
     <body>
         <a href="paginas/sobre.html">Sobre mim</a>
+        <!--
+            da mesma forma que podemos fazer um link para uma página, podemos fazer também para uma imagem
+        -->
+        <a href="imagens/avatar.png">Minha foto</a>
     </body>
 </html>
