18 - Download de imagens via <a>

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <a href="paginas/sobre.html">Sobre mim</a>
         <!--
-            da mesma forma que podemos fazer um link para uma página, podemos fazer também para uma imagem
+            Mas isso fez com que o usuário abrisse a imagem no Browser, queremos que ele faça o download disso
+            Para isso adicionamos o atributo download
         -->
-        <a href="imagens/avatar.png">Minha foto</a>
+        <a href="imagens/avatar.png" download>Baixar minha foto</a>
     </body>
 </html>
