19 - Link para seções

--- a/index.html
+++ b/index.html
@@ -1,16 +1,84 @@
+
+
 <!DOCTYPE html>
 <html lang="pt">
     <head>
         <title>Home</title>
-        <style>
-        </style>
+        <style></style>
     </head>
     <body>
         <a href="paginas/sobre.html">Sobre mim</a>
-        <!--
-            Mas isso fez com que o usuário abrisse a imagem no Browser, queremos que ele faça o download disso
-            Para isso adicionamos o atributo download
-        -->
         <a href="imagens/avatar.png" download>Baixar minha foto</a>
+        <!--
+            *diminua o tamanho da tela para exemplificar*
+            Esse texto está muito longo, a seção de CSS fica lá em baixo
+            Podemos criar um link para uma seção da página!
+            mas antes precisamos dar aos elementos h2, identificadores (id) únicos
+
+            adicionar atributo id para h2 CSS
+            ex.: section-css
+
+            criar dois elementos a:
+            <a href="#section-css">CSS</a> - no topo, junto aos demais links
+            <a href="#">Voltar ao topo</a> - no final da página
+        -->
+        <h2>HTML</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            malesuada fermentum sem a ullamcorper. Integer vulputate, urna in
+            dictum iaculis, purus est sollicitudin lectus, in pulvinar nunc eros
+            eu erat. Donec a viverra tellus, ac porttitor massa. Maecenas
+            vulputate, neque quis commodo iaculis, libero ligula gravida nulla,
+            eu tristique magna erat sed nulla. Suspendisse accumsan nisl aliquet
+            diam volutpat, at malesuada turpis porta. Maecenas feugiat, odio in
+            posuere sagittis, erat tellus dictum mauris, viverra aliquam turpis
+            felis id libero. Proin dignissim pretium ante, id commodo mauris
+            lobortis non. Nam sed ipsum consectetur enim viverra fermentum at a
+            ante. Quisque sagittis arcu ac enim hendrerit imperdiet. In rhoncus
+            felis libero, id commodo nibh feugiat ut. Sed tristique lectus sit
+            amet imperdiet luctus. Suspendisse in purus sed ipsum interdum
+            bibendum. Curabitur auctor dapibus dolor nec sollicitudin. Integer
+            eu lobortis lacus. Duis blandit facilisis orci, non porta elit
+            euismod pharetra. Pellentesque ullamcorper rhoncus ligula a
+            faucibus. Vestibulum fermentum auctor mauris id viverra. Sed tempus
+            dolor et sollicitudin sagittis. In at dui id neque dignissim
+            pharetra commodo in tellus. Donec facilisis vel massa cursus ornare.
+            Phasellus ullamcorper faucibus quam et ultricies. Curabitur iaculis
+            nibh eu eros eleifend, ut viverra magna volutpat. Sed vel ornare
+            dolor. Pellentesque nec tempus odio. Fusce hendrerit felis vel mi
+            euismod molestie. In sit amet ipsum suscipit sapien placerat congue
+            eget vitae metus. Donec vulputate, ex nec commodo laoreet, nisl
+            ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per.
+        </p>
+        <h2>CSS</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            malesuada fermentum sem a ullamcorper. Integer vulputate, urna in
+            dictum iaculis, purus est sollicitudin lectus, in pulvinar nunc eros
+            eu erat. Donec a viverra tellus, ac porttitor massa. Maecenas
+            vulputate, neque quis commodo iaculis, libero ligula gravida nulla,
+            eu tristique magna erat sed nulla. Suspendisse accumsan nisl aliquet
+            diam volutpat, at malesuada turpis porta. Maecenas feugiat, odio in
+            posuere sagittis, erat tellus dictum mauris, viverra aliquam turpis
+            felis id libero. Proin dignissim pretium ante, id commodo mauris
+            lobortis non. Nam sed ipsum consectetur enim viverra fermentum at a
+            ante. Quisque sagittis arcu ac enim hendrerit imperdiet. In rhoncus
+            felis libero, id commodo nibh feugiat ut. Sed tristique lectus sit
+            amet imperdiet luctus. Suspendisse in purus sed ipsum interdum
+            bibendum. Curabitur auctor dapibus dolor nec sollicitudin. Integer
+            eu lobortis lacus. Duis blandit facilisis orci, non porta elit
+            euismod pharetra. Pellentesque ullamcorper rhoncus ligula a
+            faucibus. Vestibulum fermentum auctor mauris id viverra. Sed tempus
+            dolor et sollicitudin sagittis. In at dui id neque dignissim
+            pharetra commodo in tellus. Donec facilisis vel massa cursus ornare.
+            Phasellus ullamcorper faucibus quam et ultricies. Curabitur iaculis
+            nibh eu eros eleifend, ut viverra magna volutpat. Sed vel ornare
+            dolor. Pellentesque nec tempus odio. Fusce hendrerit felis vel mi
+            euismod molestie. In sit amet ipsum suscipit sapien placerat congue
+            eget vitae metus. Donec vulputate, ex nec commodo laoreet, nisl
+            ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per.
+        </p>
     </body>
 </html>
