--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
     <body>
         <a href="paginas/sobre.html">Sobre mim</a>
         <a href="imagens/avatar.png" download>Baixar minha foto</a>
+        <a href="#section-css">CSS</a>
         <!--
-            *diminua o tamanho da tela para exemplificar*
-            Esse texto está muito longo, a seção de CSS fica lá em baixo
-            Podemos criar um link para uma seção da página!
-            mas antes precisamos dar aos elementos h2, identificadores (id) únicos
+            Podemos também fazer links para outros sites externos
+            para isso informe no href o endereço completo do site
+            *demonstrar*
 
-            adicionar atributo id para h2 CSS
-            ex.: section-css
-
-            criar dois elementos a:
-            <a href="#section-css">CSS</a> - no topo, junto aos demais links
-            <a href="#">Voltar ao topo</a> - no final da página
+            Podemos também adicionar o atributo target="_blank"
+            para fazer o link abrir em uma nova página
         -->
+        <a href="https://google.com" target="_blank">Google</a>
+
         <h2>HTML</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -51,7 +49,7 @@
             ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
             aptent taciti sociosqu ad litora torquent per conubia nostra, per.
         </p>
-        <h2>CSS</h2>
+        <h2 id="section-css">CSS</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
             malesuada fermentum sem a ullamcorper. Integer vulputate, urna in
@@ -80,5 +78,6 @@
             ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
             aptent taciti sociosqu ad litora torquent per conubia nostra, per.
         </p>
+        <a href="#">Voltar ao topo</a>
     </body>
 </html>
