21 - Criação de Stylesheet

--- a/index.html
+++ b/index.html
@@ -1,83 +1,21 @@
-
-
 <!DOCTYPE html>
 <html lang="pt">
     <head>
-        <title>Home</title>
-        <style></style>
+        <title>Minha primeira página 🤙</title>
+        <!--
+            Podemos mover os nossos estilos CSS para outro arquivo com o elemento link da forma abaixo:
+            Para isso vamos criar um arquivo styles.css e colar todo o conteúdo do elemento style da página index.html
+
+            Nossa página está pequena mas em páginas maiores essa organização é vital para facilitar a leitura e manutenção do código
+        -->
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <a href="paginas/sobre.html">Sobre mim</a>
-        <a href="imagens/avatar.png" download>Baixar minha foto</a>
-        <a href="#section-css">CSS</a>
-        <!--
-            Podemos também fazer links para outros sites externos
-            para isso informe no href o endereço completo do site
-            *demonstrar*
-
-            Podemos também adicionar o atributo target="_blank"
-            para fazer o link abrir em uma nova página
-        -->
-        <a href="https://google.com" target="_blank">Google</a>
-
-        <h2>HTML</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            malesuada fermentum sem a ullamcorper. Integer vulputate, urna in
-            dictum iaculis, purus est sollicitudin lectus, in pulvinar nunc eros
-            eu erat. Donec a viverra tellus, ac porttitor massa. Maecenas
-            vulputate, neque quis commodo iaculis, libero ligula gravida nulla,
-            eu tristique magna erat sed nulla. Suspendisse accumsan nisl aliquet
-            diam volutpat, at malesuada turpis porta. Maecenas feugiat, odio in
-            posuere sagittis, erat tellus dictum mauris, viverra aliquam turpis
-            felis id libero. Proin dignissim pretium ante, id commodo mauris
-            lobortis non. Nam sed ipsum consectetur enim viverra fermentum at a
-            ante. Quisque sagittis arcu ac enim hendrerit imperdiet. In rhoncus
-            felis libero, id commodo nibh feugiat ut. Sed tristique lectus sit
-            amet imperdiet luctus. Suspendisse in purus sed ipsum interdum
-            bibendum. Curabitur auctor dapibus dolor nec sollicitudin. Integer
-            eu lobortis lacus. Duis blandit facilisis orci, non porta elit
-            euismod pharetra. Pellentesque ullamcorper rhoncus ligula a
-            faucibus. Vestibulum fermentum auctor mauris id viverra. Sed tempus
-            dolor et sollicitudin sagittis. In at dui id neque dignissim
-            pharetra commodo in tellus. Donec facilisis vel massa cursus ornare.
-            Phasellus ullamcorper faucibus quam et ultricies. Curabitur iaculis
-            nibh eu eros eleifend, ut viverra magna volutpat. Sed vel ornare
-            dolor. Pellentesque nec tempus odio. Fusce hendrerit felis vel mi
-            euismod molestie. In sit amet ipsum suscipit sapien placerat congue
-            eget vitae metus. Donec vulputate, ex nec commodo laoreet, nisl
-            ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
-            aptent taciti sociosqu ad litora torquent per conubia nostra, per.
-        </p>
-        <h2 id="section-css">CSS</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            malesuada fermentum sem a ullamcorper. Integer vulputate, urna in
-            dictum iaculis, purus est sollicitudin lectus, in pulvinar nunc eros
-            eu erat. Donec a viverra tellus, ac porttitor massa. Maecenas
-            vulputate, neque quis commodo iaculis, libero ligula gravida nulla,
-            eu tristique magna erat sed nulla. Suspendisse accumsan nisl aliquet
-            diam volutpat, at malesuada turpis porta. Maecenas feugiat, odio in
-            posuere sagittis, erat tellus dictum mauris, viverra aliquam turpis
-            felis id libero. Proin dignissim pretium ante, id commodo mauris
-            lobortis non. Nam sed ipsum consectetur enim viverra fermentum at a
-            ante. Quisque sagittis arcu ac enim hendrerit imperdiet. In rhoncus
-            felis libero, id commodo nibh feugiat ut. Sed tristique lectus sit
-            amet imperdiet luctus. Suspendisse in purus sed ipsum interdum
-            bibendum. Curabitur auctor dapibus dolor nec sollicitudin. Integer
-            eu lobortis lacus. Duis blandit facilisis orci, non porta elit
-            euismod pharetra. Pellentesque ullamcorper rhoncus ligula a
-            faucibus. Vestibulum fermentum auctor mauris id viverra. Sed tempus
-            dolor et sollicitudin sagittis. In at dui id neque dignissim
-            pharetra commodo in tellus. Donec facilisis vel massa cursus ornare.
-            Phasellus ullamcorper faucibus quam et ultricies. Curabitur iaculis
-            nibh eu eros eleifend, ut viverra magna volutpat. Sed vel ornare
-            dolor. Pellentesque nec tempus odio. Fusce hendrerit felis vel mi
-            euismod molestie. In sit amet ipsum suscipit sapien placerat congue
-            eget vitae metus. Donec vulputate, ex nec commodo laoreet, nisl
-            ipsum blandit libero, eget varius lacus lacus vulputate ante. Class
-            aptent taciti sociosqu ad litora torquent per conubia nostra, per.
-        </p>
-        <a href="#">Voltar ao topo</a>
+        <img
+            src="imagens/avatar.png"
+            alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
+        />
+        <p><span class="username">martonilda</span> @suco_de_uva</p>
+        <p>dos mesmos criadores de kkkcrying, vem ai hehehehehehelp</p>
     </body>
 </html>
