22 - Imagens e distribuição da imagem em um espaço contido

--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="pt">
     <head>
         <title>Minha primeira página 🤙</title>
-        <!--
-            Podemos mover os nossos estilos CSS para outro arquivo com o elemento link da forma abaixo:
-            Para isso vamos criar um arquivo styles.css e colar todo o conteúdo do elemento style da página index.html
-
-            Nossa página está pequena mas em páginas maiores essa organização é vital para facilitar a leitura e manutenção do código
-        -->
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img
+        <!-- usar nova classe criada -->
+        <img 
+            class="avatar"
             src="imagens/avatar.png"
             alt="Foto de rosto de uma pessoa de pele escura e cabelos azuis sorrindo levemente"
         />
         <p><span class="username">martonilda</span> @suco_de_uva</p>
         <p>dos mesmos criadores de kkkcrying, vem ai hehehehehehelp</p>
+        <!--
+            Vamos criar um elemento de imagem novo e vamos aprender sobre tamanhos
+            aplique a classe 'tweet-img' criada
+        -->
+        <img 
+            class="tweet-img"
+            src="imagens/kombi.jpg"
+            alt="Kombi bordô e branca ao lado de uma mesa com cadeiras em uma planície deserta com o mar ao fundo"
+        />
     </body>
 </html>
