--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt">
     <head>
-        <title>martonilda no Twitter: "dos mesmos criadores de kkkcrying, vem ai hehehehehelp" / Twitter</title>
+        <title>
+            martonilda no Twitter: "dos mesmos criadores de kkkcrying, vem ai
+            hehehehehelp" / Twitter
+        </title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -24,13 +27,12 @@
                     </a>
                 </div>
                 <div class="tweet-content">
-                    <div style="white-space: pre-line; display: flex">
-                        <span
-                            >dos mesmos criadores de kkkcrying, vem ai
-
-                            hehehehehelp</span
-                        >
-                    </div>
+                    <p>
+                        dos mesmos criadores de kkkcrying, vem ai
+                        <br />
+                        <br />
+                        hehehehehelp
+                    </p>
                     <div class="tweet-actions">
                         <button class="tweet-action reply">
                             <div class="action-icon">
