--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             martonilda no Twitter: "dos mesmos criadores de kkkcrying, vem ai
             hehehehehelp" / Twitter
         </title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <article class="tweet-article">
